# scoutbot

./: .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  ISSUES.rst  MANIFEST.in  README.md  README.rst  app.py  app2.py  asd.json  dasd  notes.txt  requirements.optional.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  docker-publish.yaml  python-publish.yml  testing.yml
docs/: cli.rst  colors.rst  conf.py  environment.rst  index.rst  onnx.rst  overview.rst  package.rst  scoutbot.rst  usage.rst
docs/_static/: theme.css
reports/mvp/: index.html
reports/mvp/css/: style.css
scoutbot/: __init__.py  scoutbot.py  utils.py
scoutbot/agg/: __init__.py  py_cpu_nms.py
scoutbot/loc/: __init__.py  convert.mvp.py  convert.py
scoutbot/loc/models/onnx/: scout.loc.5fbfff26.0.onnx  scout.loc.5fbfff26.1.onnx  scout.loc.mvp.0.onnx
scoutbot/loc/models/pytorch/: detect.lightnet.scout.5fbfff26.v0.py  detect.lightnet.scout.5fbfff26.v0.weights  detect.lightnet.scout.5fbfff26.v1.py  detect.lightnet.scout.5fbfff26.v1.weights  detect.lightnet.scout.mvp.0.py  detect.lightnet.scout.mvp.0.weights
scoutbot/loc/transforms/: __init__.py  _postprocess.py  _preprocess.py  annotation.py  box.py  detection.py  util.py
scoutbot/loc/transforms/annotations/: annotation.py
scoutbot/loc/transforms/detections/: detection.py
scoutbot/tile/: __init__.py
scoutbot/tile_batched/: __init__.py  herdnet_model.py  main.py
scoutbot/tile_batched/models/: __init__.py  yolov8.py
scoutbot/wic/: __init__.py  convert.mvp.py  convert.py  dataloader.py
scoutbot/wic/models/onnx/: scout.wic.5fbfff26.3.0.onnx  scout.wic.5fbfff26.3.1.onnx  scout.wic.5fbfff26.3.2.onnx  scout.wic.mvp.2.0.onnx
scoutbot/wic/models/pytorch/classifier2.scout.mvp.2/: classifier.0.weights
scoutbot/wic/models/pytorch/classifier2.vulcan.5fbfff26.3/: classifier.0.weights  classifier.1.weights  classifier.2.weights
scripts/loc/: onnx.py
scripts/train-pipeline-v3/: 1.EDA-create-splits.ipynb  2.Generate-image-level-coco.ipynb  3.Generate-tile-level-coco.ipynb  4.Generate-yolo-tile-training-dataset.ipynb  5.Train-yolo.ipynb  Readme.md
scripts/wbia/: train.py
scripts/wic/: onnx.py
tests/: conftest.py  test_agg.py  test_loc.py  test_model.py  test_scoutbot.py  test_tile.py  test_wic.py
